modificacion de mobiliario, user y pass

--- a/web/META-INF/jdf/header2.jspf
+++ b/web/META-INF/jdf/header2.jspf
@@ -38,14 +38,13 @@
                       <li><a href="fromMob2">Mobiliarios</a></li>
                     </ul>
                   </li>
-                  <li><a><i class   ="fa fa-desktop"></i> Inventario Mobiliarios <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-file-text-o"></i> Inventario Mobiliarios <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="Rmobiliario2">Generar Inventario</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-file-text-o"></i> Consultar Mobiliarios  <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-desktop"></i> Consultar Mobiliarios  <span class="fa fa-chevron-down"></span></a>
                       <ul class="nav child_menu">
-                          <li><a href="Rmobiliario3">Listar Mobiliario</a></li>
                           <li><a href="CmobiliarioBja">Mobiliarios en Baja</a></li>
                       </ul>
                   </li>
